# mirmidivi

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindRtMidi.cmake  FindSTK.cmake
include/mirmidivi/: MidiDataStructure.hpp  Options.hpp  fluidsynth.hpp  message.hpp  midi.hpp  mirmidivi.hpp  render-selecter.hpp  sleep.hpp
include/mirmidivi/rendering/: Msg2Txt.hpp  PianoRoll.hpp
lib/: CMakeLists.txt
lib/mirmidivi/: CMakeLists.txt  midi.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ParseOptions.cpp  mirmidivi.cpp
src/midi_in/: CMakeLists.txt  RtMidi.cpp  fluidsynth.cpp
src/midi_in/RtMidi/: CMakeLists.txt  RtMidi.cpp  midi.cpp  midi.hpp
src/rendering/: CMakeLists.txt  Msg2Txt.cpp  PianoRoll.cpp  PrintMessage.cpp  curses.cpp  ncurses.cpp  text.cpp
src/rendering/lib/: CMakeLists.txt  Msg2Txt.cpp  PianoRoll.cpp
src/toolkit/: CMakeLists.txt  no-toolkit.cpp
test/: 01_launch-many-times.cpp  02_multi-synth-instance.cpp  CMakeLists.txt
