cmake_minimum_required(VERSION 2.8)
project(mirmidivi)

find_package(RtMidi)
if(RTMIDI_FOUND)
  include_directories(${RTMIDI_INCLUDE_DIR})
  add_library(RtMidi MODULE RtMidi.cpp)
  target_link_libraries(RtMidi ${RTMIDI_LIBRARY})
  install(TARGETS RtMidi DESTINATION ${MIRMIDIVI_LIBRARY_DIR})
endif()
